zutil-inheritance/tests/failure/too_many_parents.stderr
error[E0308]: mismatched types
  --> tests/failure/too_many_parents.rs:27:1
   |
27 | / zutil_inheritance::value! {
28 | |     struct D(B, A, C) {}
29 | |     impl Self {}
30 | | }
   | | ^
   | | |
   | | expected a tuple with 2 elements, found one with 3 elements
   | |_arguments to this function are incorrect
   |   this return type influences the call expression's return type
   |
   = note: expected tuple `(BFields, AFields)`
              found tuple `(BFields, AFields, CFields)`
note: associated function defined here
  --> src/lib.rs
   |
   |     fn from_fields(base: BaseStorage, fields: Self::Fields) -> Self;
   |        ^^^^^^^^^^^
   = note: this error originates in the macro `zutil_inheritance::value` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/failure/too_many_parents.rs:27:1
   |
27 | / zutil_inheritance::value! {
28 | |     struct D(B, A, C) {}
29 | |     impl Self {}
30 | | }
   | | ^
   | | |
   | | expected a tuple with 2 elements, found one with 3 elements
   | |_arguments to this function are incorrect
   |   this return type influences the call expression's return type
   |
   = note: expected tuple `(BMethods, AMethods)`
              found tuple `(BMethods, AMethods, CMethods)`
note: associated function defined here
  --> src/lib.rs
   |
   |     fn from_methods(base: BaseVTable, methods: Self::Methods) -> Self;
   |        ^^^^^^^^^^^^
   = note: this error originates in the macro `zutil_inheritance::value` (in Nightly builds, run with -Z macro-backtrace for more info)
